Fixes some layout issues on mobile and gets rid of the old service worker (sw.js).

--- a/src/app/components/app/app.styles.scss
+++ b/src/app/components/app/app.styles.scss
@@ -25,7 +25,7 @@
     user-select: none;
     overflow: hidden;
     overscroll-behavior: none;
-    min-height: 100vh;
+    min-height: 100%;
   }
 
   &--hasActiveHover {
@@ -58,7 +58,6 @@
     position: relative;
     max-width: 800px;
     margin: 0 auto;
-    height: 100%;
     padding: 0 32px;
     display: flex;
     flex-direction: column;
@@ -66,6 +65,7 @@
     box-sizing: border-box;
     z-index: 10;
     width: 100%;
+    height: 100%;
 
     #{$root}--showScreenshot > & {
       max-width: 1200px;
