--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -1,3 +1,8 @@
+html {
+  // See https://stackoverflow.com/questions/52848856/100vh-height-when-address-bar-is-shown-chrome-mobile.
+  height: 100%;
+}
+
 a {
   overflow: hidden;
   outline: none;
